--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,12 @@ jobs:
           dotnet-version: '8.0'
 
       - name: Install F# Dependencies
-        run: dotnet tool install -g FSharp.Formatting
+        run: dotnet tool install --local FSharp.Formatting
 
       - name: Run F# Script to Generate HTML
-        run: dotnet fsi generate.fsx
+        run: |
+          dotnet tool restore
+          dotnet fsi generate.fsx
 
       - name: Upload Generated Site
         uses: actions/upload-artifact@v4
